[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullet_player/bullet_player_2.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/spritesheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.85217
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 46.2884

[node name="bullet2_player" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.235762, -0.129647 )
scale = Vector2( 0.673157, 0.694045 )

[node name="bullet_blue" type="Sprite" parent="."]
modulate = Color( 0.780392, 0.870588, 0.890196, 1 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 308.678, 1579.26, 23.8555, 25.2424 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="magnet"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="area_entered" from="." to="." method="_on_bullet2_player_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="magnet" to="." method="_on_magnet_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
